# Taller2ADA

./: CMakeLists.txt
include/Problema 1/: EditorTexto.h  Pila.h
include/Problema 2/: Cola.h  Urgencias.h
include/Problema 3/: ListaCanciones.h  ListaEnlazada.h
include/Problema 4/: TablaHash.h  Ventas.h
src/Problema 1/: EditorTexto.cpp  Pila.cpp
src/Problema 2/: Cola.cpp  Urgencias.cpp
src/Problema 3/: ListaCanciones.cpp  ListaEnlazada.cpp
src/Problema 4/: TablaHash.cpp  Ventas.cpp
